--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -6,7 +6,7 @@
     left: 2%;
     max-height: 85%;
     max-width: 25;
-    border-radius: 1;
+    border-radius: 1%;
     background-color: rgba(255,255,255,0.7);
 }
 
