--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -11,54 +11,21 @@
         <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
     </div>
 
-    <div class='col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
-                offset-lg-1 offset-xl-2'
-      *ngIf='sessionState'>
-      <a class='btn btn-primary' routerLink='profile' style="margin-right: 1%;">Profile<span class='sr-only'></span></a>
-      <app-logout></app-logout>
+    <div *ngIf='sessionState' class="dropdown col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
+      offset-lg-1 offset-xl-2">
+      <img class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [src]="link" alt="Settings">
+      <div class="dropdown-menu dropdown-menu-right ">
+        <button class="btn btn-secondary dropdown-item" routerLink='profile'>Profile</button>
+        <app-logout class="dropdown-item"></app-logout>
+      </div>
     </div>
-
-    <!-- <app-logout class='col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1
-                       offset-sm-1 offset-md-3 offset-lg-2 offset-xl-3'>
-    </app-logout>  -->
+    
   </div>
 
 <!-- 
-  <nav class='navbar navbar-expand-sm navbar-light bg-light'>
-    <a class='navbar-brand' href='#'>Homepage </a>
-    <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-      <span class='navbar-toggler-icon'></span>
-    </button>
-
-    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-
-      <ul class='navbar-nav mr-auto'>
-        <li class='nav-item'>
-          <a class='nav-link'>Home <span class='sr-only'>(current)</span></a>
-        </li>
-        <li class='nav-item'>
-          <a class='nav-link'>Link</a>
-        </li>
-        <li class='nav-item'>
-          <a class='nav-link' routerLink='profile'>{{ username }}</a>
-        </li>
-      </ul>
-
-      <ul class='navbar-nav' my-2 my-lg-0>
-
-        <li class='nav-item'>
-          <a class='nav-link' *ngIf='!sessionState' routerLink='register'>Register<span class='sr-only'></span></a>
-        </li>
-        <li class='nav-item'>
-          <a class='nav-link' *ngIf='!sessionState' routerLink='login'>Login</a>
-        </li>
-        <li class='nav-item'>
-          <app-logout></app-logout>
-        </li>
-      </ul>
-      <form class='form-inline my-2 my-lg-0'>
-        <input class='form-control mr-sm-2' type='search' placeholder='Search' aria-label='Search'>
-        <button class='btn btn-outline-success my-2 my-sm-0' type='submit'>Search</button>
-      </form>
-    </div>
-  </nav> -->
+  <div class='col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
+  offset-lg-1 offset-xl-2'
+*ngIf='sessionState'>
+<a class='btn btn-primary' routerLink='profile' style="margin-right: 1%;">Profile<span class='sr-only'></span></a>
+<app-logout></app-logout>
+</div> -->
