--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div id="main">
+<div id="main" class="border border-secondary rounded">
     <div *ngIf='User'>
         <app-username [username]='User.username'></app-username>
         <br>
