--- a/frontend/src/app/components/profile/password/password.component.html
+++ b/frontend/src/app/components/profile/password/password.component.html
@@ -6,7 +6,7 @@
     <form *ngIf='changing' [formGroup]='changeForm' (ngSubmit)='onSubmit()'>
         <div class='form-group'>
             <label for='newPassword'>New Password</label>
-            <input type='text' id='newPassword' formControlName='newPassword' class='form-control'>
+            <input type='text' formControlName='newPassword' class='form-control'>
         </div>        
         <button *ngIf='changing' class='btn btn-danger' type='submit'>Confirm</button>
         <button *ngIf='changing' class='btn btn-light' id='cancel' (click)='onClick()'>Cancel</button> 
