--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
+<div>
   <div class="row ">
     <form class='form col-6 col-sm-6 col-md-6 col-lg-6 col-xl-4
                       offset-3 offset-sm-3 offset-md-3 offset-lg-3 offset-xl-4'>
@@ -10,17 +11,18 @@
         <a class='btn btn-primary' routerLink='register' style="margin-right: 1%;">Register<span class='sr-only'></span></a>
         <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
     </div>
-
-    <div *ngIf='sessionState' class="dropdown col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
-      offset-lg-1 offset-xl-2">
-      <img class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [src]="link" alt="Settings">
-      <div class="dropdown-menu dropdown-menu-right ">
-        <button class="btn btn-secondary dropdown-item" routerLink='profile'>Profile</button>
-        <app-logout class="dropdown-item"></app-logout>
-      </div>
-    </div>
-    
   </div>
+
+  <div *ngIf='sessionState' id='icon' class="dropdown">
+    <img class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [src]="link" alt="Settings">
+    <div class="dropdown-menu dropdown-menu-right ">
+      <button class="btn btn-secondary dropdown-item" routerLink='profile'>Profile</button>
+      <app-logout class="dropdown-item"></app-logout>
+    </div>
+  </div>   
+</div>
+
+
 
 <!-- 
   <div class='col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
