--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -1,3 +1,9 @@
+#icon {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+}
+
 .row {
     z-index: 1;
     padding-top: 0.8%;
@@ -10,8 +16,4 @@
 
 img {
     max-width: 60px;
-}
-
-app-logout button{
-    padding-left: 50%;
 }
