--- a/frontend/src/app/components/registrationpage/registrationpage.component.scss
+++ b/frontend/src/app/components/registrationpage/registrationpage.component.scss
@@ -4,6 +4,14 @@
     z-index: 1;
 }
 
-input.ng-invalid.ng-touched {
-    border: 1px solid red;
+// input.ng-invalid.ng-touched {
+//     border: 1px solid red;
+// }
+
+#username,#email{
+  width:450px
+}
+mat-form-field{
+  width: 225px;
+  margin-bottom: 0px;
 }
