--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,11 +1,6 @@
 <div id="main" class="border border-secondary rounded">
     <div *ngIf='User'>
-        <app-username [username]='User.username'></app-username>
-        <br>
-        <app-password [password]='User.password' [username]='User.username'></app-password>
-        <br>
-        <app-email [email]='User.email' [username]='User.username'></app-email>
-        <br>
+        <app-proprety *ngFor='let proprety of propreties; let i = index' [username]='User.username' [proprety]='proprety' [propretyValue]='values[i]'></app-proprety>
         <div id='delete'>
             <button class='btn btn-danger'>Delete Account</button>
         </div>
