--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -4,6 +4,10 @@
     right: 20px;
 }
 
+#searchResultsContainer {
+    background-color: rgba(255,255,255, $alpha: 0.9);
+}
+
 .row {
     z-index: 1;
     padding-top: 0.8%;
