--- a/frontend/src/app/components/friendlist/friendlist.component.html
+++ b/frontend/src/app/components/friendlist/friendlist.component.html
@@ -6,6 +6,6 @@
         </div>
     </div>
     <form (submit)='onSubmit(input.value)' >
-        <input #input type='text' class="form-control rounded-0" (keyup)='onKey(input.value)' placeholder='' id="input">
+        <input #input type='text' class="form-control rounded-0" (keyup)='onKey(input.value)' placeholder='' id="input" autocomplete='off'>
     </form>
 </div>
