--- a/frontend/src/app/components/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registrationpage/registrationpage.component.html
@@ -6,7 +6,6 @@ id='form'
 [formGroup]='registrationForm'>
   <h1 class='modal-title'>Registration</h1>
   <hr>
-
     <!-- Name -->
     <div formGroupName='name' class="row">
       <!-- first Name -->
@@ -77,17 +76,35 @@ id='form'
     </mat-form-field>
     <small id='emailHelp' class='form-text text-muted'>We'll never share your email with anyone else.</small>
 
-  <br>
+
+
+    <!-- Birthdate -->
+    <br>
+    <div class="form-inline">
+      <div class="form-group">
+        <div class="input-group"
+        formControlName="birthdate">
+          <input class="form-control" placeholder="yyyy-mm-dd"
+                name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
+          <div class="input-group-append">
+            <button id='calendar' class="btn btn-outline-secondary calendar"
+            (click)="d.toggle()" type="button"><mat-icon>calendar_today</mat-icon></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+
+
+
     <!-- Gender -->
-    <mat-radio-group aria-label="Select an option" class="row">
+    <mat-radio-group aria-label="Select an option" class="row"
+    formControlName="gender">
       <mat-radio-button value="Male" class='col-4'>Male</mat-radio-button>
       <mat-radio-button value="Female" class='col-4'>Female</mat-radio-button>
       <mat-radio-button value="Other" class='col-4'>Other</mat-radio-button>
     </mat-radio-group>
   <br>
-
-
-
     <!-- checkbox -->
     <div>
     <mat-checkbox class='form-group'
@@ -96,4 +113,5 @@ id='form'
     </mat-checkbox>
    </div>
     <button type='submit' id='submit' class='btn btn-primary' aria-required='true'>Register</button>
-</form>
+
+  </form>
