--- a/frontend/src/app/components/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registrationpage/registrationpage.component.html
@@ -82,9 +82,9 @@ id='form'
     <br>
     <div class="form-inline">
       <div class="form-group">
-        <div class="input-group"
-        formControlName="birthdate">
+        <div class="input-group">
           <input class="form-control" placeholder="yyyy-mm-dd"
+          formControlName="birthdate"
                 name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
           <div class="input-group-append">
             <button id='calendar' class="btn btn-outline-secondary calendar"
