--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -1,24 +1,31 @@
-#sidebar {
+.sidebar {
     z-index: 1;
     position: fixed;
     max-height: 85%;
     max-width: 25;
     border-radius: 1%;
     background-color: rgba(255,255,255,0.7);
+
+    top: 10%;
+    bottom: 0%;
+    left: 2%;
+}
+
+#theButton {
+    z-index: 2;
+    position: fixed;
+    top: 5%;
+    left: 2%;
+    opacity: 1;
 }
 
 
-.row {
-    height: 5%;
-    background-color: rgba(255,255,255,0.85);
-}
-
-.collapsing {
-    transition-property: width, margin-left ;
-    transition-duration: 0.4s;
-    width: 0px;
-    margin-left: -10px;
-}
+// .collapsing {
+//     transition-property: width, margin-left ;
+//     transition-duration: 0.4s;
+//     width: 0px;
+//     margin-left: -10px;
+// }
 
 mwlResizable {
     box-sizing: border-box; // required for the enableGhostResize option to work
