--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -1,14 +1,6 @@
-.sidebar {
-    z-index: 1;
-    position: fixed;
+#sidebarContent {
     max-height: 85%;
-    max-width: 25;
-    border-radius: 1%;
-    background-color: rgba(255,255,255,0.7);
-
-    top: 10%;
-    bottom: 0%;
-    left: 2%;
+    max-width: 25%;
 }
 
 #theButton {
@@ -16,17 +8,65 @@
     position: fixed;
     top: 5%;
     left: 2%;
-    opacity: 1;
 }
 
 
-// .collapsing {
-//     transition-property: width, margin-left ;
-//     transition-duration: 0.4s;
-//     width: 0px;
-//     margin-left: -10px;
-// }
+.collapsing {
+    // transition-property: height ;
+    // transition-duration: 4s;
+    // height: 0px;
+    // margin-left: -10px;
+}
 
 mwlResizable {
     box-sizing: border-box; // required for the enableGhostResize option to work
 }
+
+/* Icon 4 */
+
+.animated-icon3 span:nth-child(1) {
+    top: 0px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+    }
+    
+    .animated-icon3 span:nth-child(2) {
+    top: 10px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+    }
+    
+    .animated-icon3 span:nth-child(3) {
+    top: 20px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+    }
+    
+    .animated-icon3.open span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 0px;
+    left: 8px;
+    }
+    
+    .animated-icon3.open span:nth-child(2) {
+    width: 0%;
+    opacity: 0;
+    }
+    
+    .animated-icon3.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 21px;
+    left: 8px;
+    }
